--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_storage: ^11.4.0
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.2
   get: ^4.6.6
   google_sign_in: ^6.1.5
 
