--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fluttertoast: ^8.2.2
   get: ^4.6.6
   google_sign_in: ^6.1.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
