--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.3.0
   change_app_package_name: ^1.1.0
   cloud_firestore: ^4.12.0
   cupertino_icons: ^1.0.2
@@ -36,10 +37,13 @@ dependencies:
   firebase_storage: ^11.4.0
   flutter:
     sdk: flutter
+  flutter_slidable: ^3.0.1
   fluttertoast: ^8.2.2
   get: ^4.6.6
   google_sign_in: ^6.1.5
+  image_picker: ^1.0.4
   intl: ^0.18.1
+  phosphor_flutter: ^2.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -67,12 +71,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: lib/assets/fonts/Poppins-Regular.ttf
+    
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
