--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,14 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: ^3.3.0
+  card_swiper: ^3.0.1
   change_app_package_name: ^1.1.0
-  cloud_firestore: ^4.12.0
+  cloud_firestore: ^4.14.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.12.0
-  firebase_core: ^2.20.0
+  firebase_core: ^2.24.2
   firebase_storage: ^11.4.0
+ 
   flutter:
     sdk: flutter
   flutter_slidable: ^3.0.1
@@ -44,6 +46,7 @@ dependencies:
   image_picker: ^1.0.4
   intl: ^0.18.1
   phosphor_flutter: ^2.0.1
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
